@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 1.13
+    - conway() can preload images now (TODO: guess "off" value)
     - off param now available when loading images
     - can override table param when loading images
     - reminder: animate has been deprecated since v1.05
